fix button out of bounds

--- a/src/components/features/Promotion/Promotion.module.scss
+++ b/src/components/features/Promotion/Promotion.module.scss
@@ -120,6 +120,11 @@
         }
     }
 
+    .priceButton {
+        position: relative;
+        right: 20px;
+    }
+
     .price {
         position: absolute;
         top: 85%;
@@ -128,10 +133,21 @@
     }
         .oldPrice {
             position: relative;
-            right: 50px;
-            top: 30px;
-
+            right: 70px;
+            top: 30px;   
         }
+        
+        @media (max-width: 1200px) {
+            .oldPrice {
+                right: 74px;
+            }
+
+            .priceButton {
+                position: relative;
+                right: 20px;
+            }
+        }
+
     
 
     .line {
@@ -242,6 +258,9 @@
                 }
                 .right {
                     width: 20%;
+                }
+                .oldPrice {
+                    right: 74px;
                 }
             }
         }  
